cabal-version:      2.4
name:               secucloud-challenge
version:            0.0.0.1

-- synopsis:
-- description:
-- bug-reports:
license:            LicenseRef-LGPL-2
license-file:       LICENSE
author:             Julian Ospald
maintainer:         hasufell@posteo.de

-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  -- cabal-fmt: expand lib
  exposed-modules:    SecuCloud

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base    ^>=4.13.0.0
    , safe    ^>=0.3
    , vector  ^>=0.12

  hs-source-dirs:     lib
  default-language:   Haskell2010
  default-extensions:
    LambdaCase
    MultiWayIf
    RecordWildCards
    TupleSections

test-suite secucloud-challenge-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          MyLibTest.hs
  build-depends:    base ^>=4.13.0.0
